[package]
name = "bevy_research"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1" # ゲームエンジン
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" } # デバッグ用エディタ
bevy_easings = "0.6.0" # Tween
bevy_ecs_ldtk = "0.2.0" # タイルマップ
bevy_rapier3d = "0.12.1" # 物理エンジン

# region 3D examples
[[example]]
name = "3d_basic"
path = "examples/3d/3d_basic.rs"

[[example]]
name = "load_model"
path = "examples/3d/load_model.rs"
# endregion

# region bevy_easings examples
[[example]]
name = "bevy_easings_basic"
path = "examples/beby_easings/bevy_easings_basic.rs"
# endregion

# region bevy_rapier examples
[[example]]
name = "bevy_rapier3d_basic"
path = "examples/bevy_rapier/3d/bevy_rapier3d_basic.rs"
# endregion

# region ecs-systems examples
[[example]]
name = "generic_system"
path = "examples/ecs/systems/generic_system.rs"
# endregion